Feat: add feature to text with others